--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Ihsan project</title>
   <style>
     body{
-      color:black;
+      background:black;
     }
     .hello{
           color: white;
@@ -17,6 +17,9 @@
     /* color: beige; */
     background: grey;
     border-radius: 10rem;
+      height: 6vh;
+    overflow: hidden;
+    padding-top: 4vw;
     }
     .a{
           color: blue;
