--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     .p{
           text-align: center;
-    font-size: 5vw;
+    font-size: 5vh;
     /* color: beige; */
     background: grey;
     border-radius: 10rem;
