--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <h1>مشروع احسان سميح الشريف</h1>
+  <h1 class="hello">مشروع احسان سميح الشريف</h1>
   <div id="link-made-by-Ihsan">
     <!-- Links will be injected here -->
   </div>
