--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
     border-radius: 10rem;
       height: 6vh;
     overflow: hidden;
-    padding-top: 4vw;
+    padding-block: 4vw;
+
+          animation-name: Ihsan;
+    animation-duration: 3s;
+    animation-timing-function: ease-in-out;
     }
     .a{
           color: blue;
     text-decoration: none;
+    }
+    @keyframes Ihsan{
+      from{opacity:0;}
+      to{opacity:1;}
     }
   </style>
 </head>
@@ -66,6 +74,8 @@
     async function createLinks() {
       const container = document.getElementById('link-made-by-Ihsan');
       for (const url of urls) {
+        setTimeout(() => {
+    console.log("This message appears after 2 seconds.");
         const title = await fetchTitle(url);
         const a = document.createElement('a');
         a.href = url;
@@ -78,6 +88,7 @@
         p.className = 'p';
         p.appendChild(a);
         container.appendChild(p);
+          }, 2000);
       }
     }
 
