--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     .p{
           text-align: center;
     font-size: 5vh;
-    /* color: beige; */
     background: grey;
     border-radius: 10rem;
       height: 6vh;
@@ -32,6 +31,20 @@
     @keyframes Ihsan{
       from{opacity:0;}
       to{opacity:1;}
+    }
+    download{
+                color: green;
+    text-decoration: none;
+                text-align: center;
+    font-size: 5vh;
+    background: blue;
+    border-radius: 10rem;
+      height: 6vh;
+    overflow: hidden;
+    padding-block: 4vw;
+          animation-name: Ihsan;
+    animation-duration: 3s;
+    animation-timing-function: ease-in-out;
     }
   </style>
 </head>
@@ -94,6 +107,6 @@
     createLinks();
                                                         }, 2000);
   </script>
-  <button herf="">download</button>
+  <a herf="https://github.com/Ihsan706/English/archive/refs/heads/main.zip" class="download">download</a>
 </body>
 </html>
