--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       from{opacity:0;}
       to{opacity:1;}
     }
-    download{
+    .download{
                 color: green;
     text-decoration: none;
                 text-align: center;
