--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           animation-name: Ihsan;
     animation-duration: 3s;
     animation-timing-function: ease-in-out;
+      display: block;
     }
   </style>
 </head>
