--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       to{opacity:1;}
     }
     .download{
-     width:100vw;
+     /*width:100vw;*/
                 color: green;
     text-decoration: none;
                 text-align: center;
