--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Ihsan project</title>
   <style>
+    p{
+      color:white;
+    }
     body{
       background:black;
     }
