--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@ createLinks();
 
   </script>
   <a href="https://github.com/Ihsan706/English/archive/refs/heads/main.zip" class="download">download</a>
-  <p>تمت البرمجه من احسان</p>
+  <p>تمت البرمجه من احسان سميح الشريف</p>
 </body>
 </html>
